# tap-linear

./: .gitignore  meltano.yml  pyproject.toml
tap_linear/: streams.py  tap.py
tap_linear/queries/: issues.py
tap_linear/schemas/: issues.py
