[tool.poetry]
name = "tap-linear"
version = "0.1.2"
description = "`tap-linear` is a Singer tap for Linear, built with the Meltano SDK for Singer Taps."
authors = ["René Steeman"]
keywords = [
    "ELT",
    "Linear",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = "^2.32"
black = "^25.0"
singer-sdk = "^0.50.2"
ruff = "^0.14.0"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_linear"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-linear = 'tap_linear.tap:TapLinear.cli'
